--- a/public/assets/admin/css/admin.css
+++ b/public/assets/admin/css/admin.css
@@ -15536,8 +15536,8 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
 }
 
 .main-panel>.content {
-  margin-top: 70px;
-  padding: 30px 15px;
+  margin-top: 0;
+  padding: 5px 15px 30px;
   min-height: calc(100vh - 123px);
 }
 
