--- a/public/assets/admin/css/admin.css
+++ b/public/assets/admin/css/admin.css
@@ -13635,18 +13635,6 @@ textarea {
   line-height: 1.428571 !important;
 }
 
-.form-group input[type=file] {
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
-
 .form-newsletter .input-group,
 .form-newsletter .form-group {
   float: left;
@@ -22207,4 +22195,8 @@ fieldset[disabled][disabled] .dark-edition .has-error .form-control,
 
 .dropdown-item {
   margin-left: 0 !important;
+}
+
+#category_id  {
+  color: #00a5bb;
 }
