--- a/public/assets/admin/css/admin.css
+++ b/public/assets/admin/css/admin.css
@@ -15522,7 +15522,9 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
   width: calc(100% - 260px);
   transition: 0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1);
 }
-
+.main-panel-register {
+  width: 100%;
+}
 .main-panel>.content {
   margin-top: 0;
   padding: 5px 15px 30px;
